tests/parser_cases/invalid/relational_missing_rhs.ob0
(* INVALID: relational operator '=' is missing the right-hand operand *)
MODULE Main;
VAR b: BOOLEAN;
BEGIN
  b := 1 =
END Main.
